# ra-bridge

./: .gitignore  Cargo.toml  config.toml  flake.nix
nix/: module.nix
src/: bridge.rs  config.rs  discover.rs  id_map.rs  leap_client.rs  leap_pairing.rs  main.rs  ra2_protocol.rs  savant_client.rs  savant_discover.rs  savant_id_map.rs  savant_translator.rs  serve.rs  state.rs  telnet_server.rs  translator.rs  web_log_layer.rs
src/web/: mod.rs  routes.rs  sse.rs  xml_export.rs
templates/: index.html
